public static class EnemyAnimator
{
    public static class Params
    {
        public const string RunningAngle = nameof(RunningAngle);
        public const string ShootingAngle = nameof(ShootingAngle);
        public const string AttackingAngle = nameof(AttackingAngle);
        public const string IsRunning = nameof(IsRunning);
        public const string IsShooting = nameof(IsShooting);
        public const string IsAttacking = nameof(IsAttacking);
        public const string IsAlive = nameof(IsAlive);
        public const string HitApplied = nameof(HitApplied);
    }
}